2007-05-07  Raphael Slinckx  <rslinckx@cvs.gnome.org>

	* data/Makefile.am:
	* data/invest-chart.desktop.in:
	Remove installation of the desktop file. We're an applet after all.
	Fixes #372706.

2006-11-19  Kjartan Maraas  <kmaraas@gnome.org>

	* invest/applet.py: Fix a typo in a comment.

2006-11-11  Davyd Madeley  <davyd@madeley.id.au>

	* invest/chart.py:
	* invest/widgets.py:
	* invest/quotes.py:
	- don't import egg.trayicon, which is seemingly unused

2006-08-13  Davyd Madeley  <davyd@madeley.id.au>

	* data/Makefile.am:
	- correct location of executable in server file

	* data/art/Makefile.am:
	- change install location

	* invest/__init__.py:
	* invest/defs.py.in:
	- set GLADEDIR appropriately. Fixes #350412.

	* invest/about.py:
	- make Close button work, fixes #348684. Thanks to Ray Strode
	  <rstrode@redhat.com>
	
	* invest/applet.py:
	- get GConfClient before attempting to use it. Fixes #350445.

2006-08-12  Wouter Bolsterlee  <uws+gnome@xs4all.nl>

	* invest/defs.py.in:
	* invest/invest-applet.py:
	* invest/invest-chart:
	Added constants needed for gettext/localization and
	fixed the gettext initialization in the two main
	scripts. Fixes bug #350875.

2006-08-11  Wouter Bolsterlee  <uws+gnome@xs4all.nl>

	* data/invest-chart.desktop.in: Mark the application
	name for translation.

2006-07-09  Raphael Slinckx  <rslinckx@cvs.gnome.org>

	* invest/__init__.py:
	* invest/applet.py:
	* invest/preferences.py:
	* invest/quotes.py:
	* invest/widgets.py:
	Import old gtik settings when upgrading.
	Allow to use only for displaying ticker symbols (without portfolio values)
	by setting amout to 0

2006-05-22  Raphael Slinckx  <rslinckx@cvs.gnome.org>

	* data/Invest_Applet.xml:
	* data/financialchart.glade:
	* invest/__init__.py:
	* invest/applet.py:
	* invest/preferences.py:
	* invest/quotes.py:
	* invest/widgets.py:
	Change the applet aspect to not reveal sensitive infos. Use a colored
	square instead to indicate daily evolution.