@@ -1,5 +1,10 @@
 2007-05-07  Raphael Slinckx  <rslinckx@cvs.gnome.org>
 
+	* invest/widgets.py:
+	Fix division by zero, and bug #397941.
+
+2007-05-07  Raphael Slinckx  <rslinckx@cvs.gnome.org>
+
 	* data/Makefile.am:
 	* data/invest-chart.desktop.in:
 	Remove installation of the desktop file. We're an applet after all.
